# podcast

./: .classpath  .gitignore  .project  AndroidManifest.xml  CHANGELOG.md  CONTRIBUTING.md  Changelog.txt  Privacy.md  README.md  Readme.md  build.gradle  build.gradle.backup  gradle.properties  keystore_example.properties  local.properties  proguard.cfg  settings.gradle
app/: Android.mk  CMakeLists.txt  build.gradle  fabric.properties  org_bottiger_podcast_Player_sonic_Sonic.h  proguard-rules.pro
app/jni/: sonicjni.c  sonicjni.h
app/src/amazon/: AndroidManifest.xml
app/src/google/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SoundWavesUtils.cpp  simpleTest.cpp  sonicjni.c
app/src/main/cpp/include/: SoundWavesUtils.h  simpleTest.h  sonicjni.h
app/src/main/jni/: Android.mk  hello-jni.c  sonicjni.c
app/src/main/res/anim/: button_elevation.xml  slide_in_bottom.xml  slide_in_left.xml  slide_in_right.xml  slide_in_top.xml  slide_out_bottom.xml  slide_out_left.xml  slide_out_right.xml  slide_out_top.xml  top_player_more.xml
app/src/main/res/drawable/: actionbar_background.xml  border_frame.xml  button_flash.xml  drag2_new.xcf  drag_handle.xml  drawer_left_title_box.xml  email.xml  feed_view_scrollbar_thumb.xml  feedview_lower_gradient.xml  footer_gradient.xml  github_circle.xml  header_gradient.xml  header_gradient_light.xml  ic_bookmark_black.xml  ic_build_24dp.xml  ic_chat_bubble_outline_24dp.xml  ic_check_circle_black_24dp.xml  ic_clear_all_24dp.xml  ic_clear_black_24dp.xml  ic_cloud_queue_24dp.xml  (+41 more)
(+1169 files in other folders)
